--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
-<html>
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="keywords" content="HTML, CSS, JavaScript, Burgener, Brady">
+  <meta name="author" content="Brady Burgener">
+  <meta name="description" content="Brady Burgener's website">
+  <title>BurgenerBrady</title>
+</head>
 <body>
   <h1>Brady</h1>
   <p>Welcome to my website!</p>
