--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
   <meta name="keywords" content="HTML, CSS, JavaScript, Burgener, Brady">
   <meta name="author" content="Brady Burgener">
   <meta name="description" content="Brady Burgener's website">
-  <title>BurgenerBrady</title>
+  <title>Burgener Brady</title>
 </head>
 <body>
-  <h1>Brady</h1>
+  <nav>
+    <table>
+      <thead>
+        <th><a href=".\helloworld.html">Hello World</a></th>
+        <th></th>
+        <th></th>
+      </thead>
+    </table>
+  </nav>
+  <h1>Brady Burgener</h1>
   <p>Welcome to my website!</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
