--- a/helloworld.html
+++ b/helloworld.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset=""UTF-8">
     <title>My Website</title>
-    <link rel="icon" href="falcon.jpg">
+    <link rel="icon" href=".\falcon.jpg">
   </head>
   <body>
     <h1> My Website </h1>
