--- a/helloworld.html
+++ b/helloworld.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset=""UTF-8">
-    <title>My Website</title>
+    <meta charset="UTF-8">
+    <meta name="keywords" content="HTML, CSS, JavaScript, Burgener, Brady">
+    <meta name="author" content="Brady Burgener">
+    <meta name="description" content="Brady Burgener's website">
+    <title>Hello World -> Burgener Brady</title>
     <link rel="icon" href=".\falcon.jpg">
   </head>
   <body>
+    <nav>
+      <table>
+        <thead>
+          <th><a href=".\index.html">Home page</a></th>
+          <th><a href=".\helloworld.html">Hello World</a></th>
+          <th></th>
+          <th></th>
+        </thead>
+      </table>
     <h1> My Website </h1>
     <script> window.alert('Hello World'); </script>
   </body>
