--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
   <meta name="keywords" content="HTML, CSS, JavaScript, Burgener, Brady">
   <meta name="author" content="Brady Burgener">
   <meta name="description" content="Brady Burgener's website">
+  <link rel="icon" href=".\falcon.jpg">
   <title>Burgener Brady</title>
 </head>
 <body>
   <nav>
     <table>
       <thead>
+        <th><a href=".\index.html">Home page</a></th>
         <th><a href=".\helloworld.html">Hello World</a></th>
         <th></th>
         <th></th>
