adds HappyIceCream.html

--- a/helloworld.html
+++ b/helloworld.html
@@ -14,7 +14,7 @@
         <thead>
           <th><a href=".\index.html">Home page</a></th>
           <th><a href=".\helloworld.html">Hello World</a></th>
-          <th></th>
+          <th><a href=".\happyIceCream.html">Happy Ice Cream</a></th>
           <th></th>
         </thead>
       </table>
