--- a/happyIceCream.html
+++ b/happyIceCream.html
@@ -19,8 +19,8 @@
       </thead>
     </table>
   </nav>
-  <h1>Brady Burgener</h1>
-  <p>Welcome to my website!</p>
+  <h1 style="text-align: center;">Happy Ice Cream Dance</h1>
+  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
 
 </html>
