--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="author" content="Brady Burgener">
   <meta name="description" content="Brady Burgener's website">
   <link rel="icon" href=".\falcon.jpg">
+  <link rel="style" href=".\css\style.css"
   <title>Burgener Brady</title>
 </head>
 <body>
