--- a/helloworld.html
+++ b/helloworld.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Brady Burgener's website">
     <title>Hello World -> Burgener Brady</title>
     <link rel="icon" href=".\falcon.jpg">
+    <link rel="stylesheet" href=".\css\style.css">
   </head>
   <body>
     <nav>
