--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <th><a href=".\index.html">Home page</a></th>
         <th><a href=".\helloworld.html">Hello World</a></th>
         <th><a href=".\happyIceCream.html">Happy Ice Cream</a></th>
-        <th></th>
+        <th><a href=".\projects\index.html">projects</a></th>
       </thead>
     </table>
   </nav>
