--- a/projects/IdahoWebSite/index.html
+++ b/projects/IdahoWebSite/index.html
@@ -8,9 +8,12 @@
   </head>
 
   <body>
+    <p>
+      <a href=".../index.html">home</a>
+    </p>
     <nav>
       <div class="banner">
-        This is a student project -- not an offical cite
+        This is a personal project -- not an offical cite
       </div>
       <div class="nav">
         <table>
@@ -123,7 +126,7 @@
         </table>
       </div>
       <div class="banner">
-        This is a student project -- not an offical cite
+        This is a personal project -- not an offical cite
       </div> 
     </footer>
   </body>
