--- a/projects/IdahoWebSite/index.html
+++ b/projects/IdahoWebSite/index.html
@@ -8,12 +8,10 @@
   </head>
 
   <body>
-    <p>
-      <a href=".../index.html">home</a>
-    </p>
     <nav>
       <div class="banner">
-        This is a personal project -- not an offical cite
+        <p>This is a student project -- not an offical cite</p>
+        <p><a href="..\..\index.html">home</a>--><a href="..\index.html">projects</a></p>
       </div>
       <div class="nav">
         <table>
@@ -126,7 +124,7 @@
         </table>
       </div>
       <div class="banner">
-        This is a personal project -- not an offical cite
+        This is a student project -- not an offical cite
       </div> 
     </footer>
   </body>
