--- a/projects/IdahoWebSite/Boise.html
+++ b/projects/IdahoWebSite/Boise.html
@@ -9,7 +9,8 @@
   <body>
     <nav>
       <div class="banner">
-        This is a student project -- not an offical cite
+        <p>This is a student project -- not an offical cite</p>
+        <p><a href="..\..\index.html">home</a>--><a href="..\index.html">projects</a></p>
       </div>
       <div class="nav">
         <table>
