--- a/projects/HelloWorld/index.html
+++ b/projects/HelloWorld/index.html
@@ -13,10 +13,8 @@
     <nav>
       <table>
         <thead>
-          <th><a href=".\index.html">Home page</a></th>
-          <th><a href=".\helloworld.html">Hello World</a></th>
-          <th><a href=".\happyIceCream.html">Happy Ice Cream</a></th>
-          <th></th>
+          <th><a href="..\..\index.html">Home page</a></th>
+          <th><a href="..\index.html">projects</a></th>
         </thead>
       </table>
     <h1> My Website </h1>
