--- a/projects/HelloWorld/index.html
+++ b/projects/HelloWorld/index.html
@@ -6,8 +6,8 @@
     <meta name="author" content="Brady Burgener">
     <meta name="description" content="Brady Burgener's website">
     <title>Hello World -> Burgener Brady</title>
-    <link rel="icon" href=".\falcon.jpg">
-    <link rel="stylesheet" href=".\css\style.css">
+    <link rel="icon" href="..\..\falcon.jpg">
+    <link rel="stylesheet" href="..\..\css\style.css">
   </head>
   <body>
     <nav>
