--- a/projects/HappyIceCream/index.html
+++ b/projects/HappyIceCream/index.html
@@ -5,18 +5,16 @@
   <meta name="keywords" content="HTML, CSS, JavaScript, Burgener, Brady">
   <meta name="author" content="Brady Burgener">
   <meta name="description" content="Brady Burgener's website">
-  <link rel="icon" href=".\falcon.jpg">
-  <link rel="stylesheet" href=".\css\style.css">
+  <link rel="icon" href="..\..\falcon.jpg">
+  <link rel="stylesheet" href="..\..\css\style.css">
   <title>Burgener Brady</title>
 </head>
 <body>
   <nav>
     <table>
       <thead>
-        <th><a href=".\index.html">Home page</a></th>
-        <th><a href=".\helloworld.html">Hello World</a></th>
-        <th><a href=".\happyIceCream.html">Happy Ice Cream</a></th>
-        <th></th>
+        <th><a href="..\..\index.html">Home page</a></th>
+        <th><a href="..\index.html">Projects</a></th>
       </thead>
     </table>
   </nav>
