--- a/projects/index.html
+++ b/projects/index.html
@@ -15,8 +15,8 @@
         <thead>
           <th><a href=".\index.html">Home page</a></th>
           <th><a href=".\IdahoWebSite\index.html">Idaho Website</a></th>
-          <th><a href=".\happyIceCream.html">Happy Ice Cream</a></th>
-          <th><a href=".\projects\index.html">projects</a></th>
+          <th><a href=".\HappyIceCream\index.html">Happy Ice Cream</a></th>
+          <th><a href=".\HelloWorld\index.html">Hello World</a></th>
         </thead>
       </table>
     </nav>
