--- a/projects/HelloWorld/index.html
+++ b/projects/HelloWorld/index.html
@@ -14,7 +14,7 @@
       <table>
         <thead>
           <th><a href="..\..\index.html">Home page</a></th>
-          <th><a href="..\index.html">projects</a></th>
+          <th><a href="..\index.html">Projects</a></th>
         </thead>
       </table>
     <h1> My Website </h1>
