--- a/projects/index.html
+++ b/projects/index.html
@@ -13,7 +13,7 @@
     <nav>
       <table>
         <thead>
-          <th><a href=".\index.html">Home page</a></th>
+          <th><a href="..\..\index.html">Home page</a></th>
           <th><a href=".\IdahoWebSite\index.html">Idaho Website</a></th>
           <th><a href=".\HappyIceCream\index.html">Happy Ice Cream</a></th>
           <th><a href=".\HelloWorld\index.html">Hello World</a></th>
