--- a/projects/index.html
+++ b/projects/index.html
@@ -5,7 +5,7 @@
   <meta name="keywords" content="HTML, CSS, JavaScript, Burgener, Brady">
   <meta name="author" content="Brady Burgener">
   <meta name="description" content="Brady Burgener's website">
-  <link rel="icon" href=".\falcon.jpg">
+  <link rel="icon" href="..\falcon.jpg">
   <link rel="stylesheet" href="..\css\style.css">
   <title>Burgener Brady</title>
 </head>
