updates the HelloWorld page

--- a/projects/HelloWorld/index.html
+++ b/projects/HelloWorld/index.html
@@ -17,7 +17,11 @@
           <th><a href="..\index.html">Projects</a></th>
         </thead>
       </table>
-    <h1> My Website </h1>
+    <h1> Hello World </h1>
+    <p>
+      While the hello world website is the first page someone should make, this page will be updated periodically. 
+      These updates will include new features to make the page more entertaining.
+    </p>
     <script> window.alert('Hello World'); </script>
   </body>
 </html>
