--- a/index.html
+++ b/index.html
@@ -20,6 +20,30 @@
   </nav>
   <h1>Brady Burgener</h1>
   <p>Welcome to my website!</p>
+  <h2>Education</h2>
+  <ul>
+    <li>Certificate in Frontend development </li>
+    <ul class="no-bullets">
+      <li>Western Governors University - Remote </li>
+      <li>July 2024 to Present </li>
+    </ul>
+    <li>B.S. in Chemical Engineering </li>
+    <ul class="no-bullets">
+      <li>Brigham Young University-Provo - Provo, UT </li>
+      <li>2001 - April 2008 </li>
+    </ul>
+  </ul>
+  <h2>Skills</h2>
+  <ul>
+    <li>Office</li>
+    <li>ProE</li>
+    <li>MathCAD</li>
+    <li>AutoCAD</li>
+    <li>JavaScript</li>
+    <li>HTML5</li>
+    <li>CSS</li>
+    <li>HTML</li>
+  </ul>
 </body>
 
 </html>
