--- a/index.html
+++ b/index.html
@@ -32,6 +32,26 @@
       <li>Brigham Young University-Provo - Provo, UT </li>
       <li>2001 - April 2008 </li>
     </ul>
+    <li>Fundamentals of Engineering</li>
+    <ul class="no-bullets">
+      <li>October 2008</li>
+      <li>Pass FE/EIT Exam for Chemical Engineering</li>
+    </ul>
+    <li>Intro to Programming Nanodegree</li>
+    <ul class="no-bullets">
+      <li>February 2017</li>
+      <li><a href="confirm.udacity.com/e/ec8eb4da-b5f6-11e7-af15-374a99e56af8">confirm.udacity.com/e/ec8eb4da-b5f6-11e7-af15-374a99e56af8</a></li>
+    </ul>
+    <li>Introduction to Python for Data Science</li>
+    <ul class="no-bullets">
+      <li>February 2017</li>
+      <li><a href="https://courses.edx.org/certificates/e9b681359c534511bedf70d1b6a8cf73">https://courses.edx.org/certificates/e9b681359c534511bedf70d1b6a8cf73</a></li>
+    </ul>
+    <li>Introduction to Computer Science and Programming Using Python</li>
+    <ul class="no-bullets">
+      <li>March 2017</li>
+      <li><a href="https://courses.edx.org/certificates/cd915c44358042c69f16d3f7a7448617">https://courses.edx.org/certificates/cd915c44358042c69f16d3f7a7448617</a></li>
+    </ul>
   </ul>
   <h2>Skills</h2>
   <ul>
