--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <li>Intro to Programming Nanodegree</li>
     <ul class="no-bullets">
       <li>February 2017</li>
-      <li><a href="confirm.udacity.com/e/ec8eb4da-b5f6-11e7-af15-374a99e56af8">confirm.udacity.com/e/ec8eb4da-b5f6-11e7-af15-374a99e56af8</a></li>
+      <li><a href="https://www.udacity.com/certificate/e/ec8eb4da-b5f6-11e7-af15-374a99e56af8">https://www.udacity.com/certificate/e/ec8eb4da-b5f6-11e7-af15-374a99e56af8</a></li>
     </ul>
     <li>Introduction to Python for Data Science</li>
     <ul class="no-bullets">
