adds under construction banner

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 </head>
 <body>
   <nav>
+    <div class="banner">
+      <p>This page is under construction</p>
+      <p><a href="..\..\index.html">home</a>--><a href="..\index.html">projects</a></p>
+    </div>
     <table>
       <thead>
         <th><a href=".\index.html">Home page</a></th>
