changes page to website

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
   <nav>
     <div class="banner">
-      <p>This page is under construction</p>
-      <p><a href="..\..\index.html">home</a>--><a href="..\index.html">projects</a></p>
+      <p>This website is under construction</p>
+      <p><a href=".\index.html">home</a>--><a href=".\projects\index.html">projects</a></p>
     </div>
     <table>
       <thead>
