reorders the education list

--- a/projects/HelloWorld/index.html
+++ b/projects/HelloWorld/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Brady Burgener's website">
     <title>Hello World -> Burgener Brady</title>
     <link rel="icon" href="..\..\falcon.jpg">
-    <link rel="stylesheet" href="..\..\css\style.css">
+    <link rel="stylesheet" type="text/css" href="..\..\css\style.css">
   </head>
   <body>
     <nav>
