--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="author" content="Brady Burgener">
   <meta name="description" content="Brady Burgener's website">
   <link rel="icon" href=".\falcon.jpg">
-  <link rel="stylesheet" href=".\css\style.css">
+  <link rel="stylesheet" type="text/css" href=".\css\style.css">
   <title>Burgener Brady</title>
 </head>
 <body>
@@ -31,15 +31,10 @@
       <li>Western Governors University - Remote </li>
       <li>July 2024 to Present </li>
     </ul>
-    <li>B.S. in Chemical Engineering </li>
+    <li>Introduction to Computer Science and Programming Using Python</li>
     <ul class="no-bullets">
-      <li>Brigham Young University-Provo - Provo, UT </li>
-      <li>2001 - April 2008 </li>
-    </ul>
-    <li>Fundamentals of Engineering</li>
-    <ul class="no-bullets">
-      <li>October 2008</li>
-      <li>Pass FE/EIT Exam for Chemical Engineering</li>
+      <li>March 2017</li>
+      <li><a href="https://courses.edx.org/certificates/cd915c44358042c69f16d3f7a7448617">https://courses.edx.org/certificates/cd915c44358042c69f16d3f7a7448617</a></li>
     </ul>
     <li>Intro to Programming Nanodegree</li>
     <ul class="no-bullets">
@@ -51,10 +46,15 @@
       <li>February 2017</li>
       <li><a href="https://courses.edx.org/certificates/e9b681359c534511bedf70d1b6a8cf73">https://courses.edx.org/certificates/e9b681359c534511bedf70d1b6a8cf73</a></li>
     </ul>
-    <li>Introduction to Computer Science and Programming Using Python</li>
+    <li>Fundamentals of Engineering</li>
     <ul class="no-bullets">
-      <li>March 2017</li>
-      <li><a href="https://courses.edx.org/certificates/cd915c44358042c69f16d3f7a7448617">https://courses.edx.org/certificates/cd915c44358042c69f16d3f7a7448617</a></li>
+      <li>October 2008</li>
+      <li>Pass FE/EIT Exam for Chemical Engineering</li>
+    </ul>
+    <li>B.S. in Chemical Engineering </li>
+    <ul class="no-bullets">
+      <li>Brigham Young University-Provo - Provo, UT </li>
+      <li>2001 - April 2008 </li>
     </ul>
   </ul>
   <h2>Skills</h2>
