--- a/projects/HappyIceCream/index.html
+++ b/projects/HappyIceCream/index.html
@@ -6,7 +6,7 @@
   <meta name="author" content="Brady Burgener">
   <meta name="description" content="Brady Burgener's website">
   <link rel="icon" href="..\..\falcon.jpg">
-  <link rel="stylesheet" href="..\..\css\style.css">
+  <link rel="stylesheet" type="text/css" href="..\..\css\style.css">
   <title>Burgener Brady</title>
 </head>
 <body>
