--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     </div>
     <table>
       <thead>
-        <th><a href=".\index.html">Home page</a></th>
-        <th><a href=".\projects\index.html">projects</a></th>
+        <th><a class="navLink" href=".\index.html">Home page</a></th>
+        <th><a class="navLink" href=".\projects\index.html">projects</a></th>
       </thead>
     </table>
   </nav>
