centers the dancing ice cream page

--- a/projects/index.html
+++ b/projects/index.html
@@ -18,15 +18,17 @@
       <table>
         <thead>
           <th><a class="navLink" href="..\index.html">Home page</a></th>
-          <th><a class="navLink" href=".\index.html">Projects</a></th>
-          <th><a href=".\IdahoWebSite\index.html">Idaho Website</a></th>
-          <th><a href=".\HappyIceCream\index.html">Happy Ice Cream</a></th>
-          <th><a href=".\HelloWorld\index.html">Hello World</a></th>
+          <th><a id="coloredBox" class="navLink" href=".\index.html">Projects</a></th>
         </thead>
       </table>
     </nav>
-    <h1>Brady Burgener</h1>
-    <p>Welcome to my website!</p>
+    <h1 style="text-align: center;">Projects</h1>
+    <p>Below are some of my projects</p>
+    <table>
+      <th><a href=".\IdahoWebSite\index.html">Idaho Website</a></th>
+      <th><a href=".\HappyIceCream\index.html">Happy Ice Cream</a></th>
+      <th><a href=".\HelloWorld\index.html">Hello World</a></th>
+    </table>
   </body>
   
   </html>
