--- a/projects/HappyIceCream/index.html
+++ b/projects/HappyIceCream/index.html
@@ -19,7 +19,7 @@
     </table>
   </nav>
   <h1 style="text-align: center;">Happy Ice Cream Dance</h1>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+  <img id="iceCream" src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" alt="Dancing Ice Cream">
 </body>
 
 </html>
