corrects navigation links that where not styled

--- a/projects/HappyIceCream/index.html
+++ b/projects/HappyIceCream/index.html
@@ -13,8 +13,8 @@
   <nav>
     <table>
       <thead>
-        <th><a href="..\..\index.html">Home page</a></th>
-        <th><a href="..\index.html">Projects</a></th>
+        <th><a class="navLink" href="..\..\index.html">Home page</a></th>
+        <th><a class="navLink" href="..\index.html">Projects</a></th>
       </thead>
     </table>
   </nav>
