changes window alert on .\projects\HelloWorld

--- a/projects/HelloWorld/index.html
+++ b/projects/HelloWorld/index.html
@@ -22,6 +22,6 @@
       While the hello world website is the first page someone should make, this page will be updated periodically. 
       These updates will include new features to make the page more entertaining.
     </p>
-    <script> window.alert('Hello World'); </script>
+    <script> window.alert('Hello World! \nWelcome to my website.'); </script>
   </body>
 </html>
