Adds Magic 8 Ball page

--- a/projects/index.html
+++ b/projects/index.html
@@ -25,9 +25,15 @@
     <h1 style="text-align: center;">Projects</h1>
     <p>Below are some of my projects</p>
     <table>
-      <th><a href=".\IdahoWebSite\index.html">Idaho Website</a></th>
-      <th><a href=".\HappyIceCream\index.html">Happy Ice Cream</a></th>
-      <th><a href=".\HelloWorld\index.html">Hello World</a></th>
+      <tr>
+        <td><a class="navLinkThree" href=".\IdahoWebSite\index.html">Idaho Website</a></td>
+        <td><a class="navLinkThree" href=".\HappyIceCream\index.html">Happy Ice Cream</a></td>
+        <td><a class="navLinkThree" href=".\HelloWorld\index.html">Hello World</a></td>
+      </tr>
+      <tr>
+        <td><a class="navLinkThree" href=".\Magic8Ball\index.html">Magic 8 Ball</a></td>
+      </tr>
+      <th><a href</th>
     </table>
   </body>
   
