--- a/projects/index.html
+++ b/projects/index.html
@@ -32,8 +32,8 @@
       </tr>
       <tr>
         <td><a class="navLinkThree" href=".\Magic8Ball\index.html">Magic 8 Ball</a></td>
+        <td><a class="navLinkThree" href=".\AdventOfCode2024\index.html">Advent of Code 2024</a></td>
       </tr>
-      <th><a href</th>
     </table>
   </body>
   
