Adds dayOne.html function

--- a/projects/AdventOfCode2024/index.html
+++ b/projects/AdventOfCode2024/index.html
@@ -15,6 +15,7 @@
                 <thead>
                     <th><a class="navLink" href="..\..\index.html">Home page</a></th>
                     <th><a class="navLink" href="..\index.html">Projects</a></th>
+                    <th><a class="navLinkThree" id="coloredBox" href=".\index.html">Advent Of Code 2024</a></th>
                 </thead>
             </table>
         </nav>
