--- a/projects/AdventOfCode2024/Day1/dayOne.html
+++ b/projects/AdventOfCode2024/Day1/dayOne.html
@@ -7,13 +7,20 @@
     <meta name="description" content="Brady Burgener's website">
     <link rel="icon" href="..\..\..\falcon.jpg">
     <link rel="stylesheet" type="text/css" href="..\..\..\css\style.css">
+    <script type="text/javascript" src=".\dayOne.js" defer></script>
     <title>Day1a\Advent Of Code 2024\projects\Burgener Brady</title>
     </head>
     <body>
-        <nav>
-            <table>
-                
-            </table>
-        </nav>
+        <table>
+            <thead>
+                <th><a class="navLink" href="..\..\..\index.html">Home page</a></th>
+                <th><a class="navLink" href="..\..\index.html">Projects</a></th>
+                <th><a class="navLinkThree" href="..\index.html">Advent Of Code 2024</a></th>
+                <th><a class="navLink" id="coloredBox" href=".\dayOne.html">Day 1 a</a></th>
+            </thead>
+        </table>
+        <p>Input a txt file with two equal columns of numbers:</p>
+        <input type="file" name="file" id="file">
+        <div id='output'></div>
     </body>
 </html>
