--- a/projects/AdventOfCode2024/Day1/dayOneb.html
+++ b/projects/AdventOfCode2024/Day1/dayOneb.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Brady Burgener's website">
     <link rel="icon" href="..\..\..\falcon.jpg">
     <link rel="stylesheet" type="text/css" href="..\..\..\css\style.css">
-    <script type="text/javascript" src=".\dayOne.js" defer></script>
+    <script type="text/javascript" src=".\dayOneb.js" defer></script>
     <title>Day1b\Advent Of Code 2024\projects\Burgener Brady</title>
     </head>
     <body>
