Adds Day 2 of AsventOfCode2024

--- a/projects/AdventOfCode2024/index.html
+++ b/projects/AdventOfCode2024/index.html
@@ -25,7 +25,7 @@
                 <td><a class="navLinkThree" href=".\Day1\dayOneb.html" >Day 1 b</a></td>
             </tr>
             <tr>
-                <td><a class="navLinkThree gray" >Day 2 a</a></td>
+                <td><a class="navLinkThree" href=".\Day2\dayTwo.html">Day 2 a</a></td>
                 <td><a class="navLinkThree gray" >Day 2 b</a></td>
             </tr>
             <tr>
