update to dayTwob, but it is still wrong

--- a/projects/AdventOfCode2024/index.html
+++ b/projects/AdventOfCode2024/index.html
@@ -26,7 +26,7 @@
             </tr>
             <tr>
                 <td><a class="navLinkThree" href=".\Day2\dayTwo.html">Day 2 a</a></td>
-                <td><a class="navLinkThree gray" >Day 2 b</a></td>
+                <td><a class="navLinkThree" href=".\Day2\dayTwob.html">Day 2 b</a></td>
             </tr>
             <tr>
                 <td><a class="navLinkThree gray" >Day 3 a</a></td>
