simplified code in dayTwobAlt.js

--- a/projects/AdventOfCode2024/Day2/dayTwob.html
+++ b/projects/AdventOfCode2024/Day2/dayTwob.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Brady Burgener's website">
     <link rel="icon" href="..\..\..\falcon.jpg">
     <link rel="stylesheet" type="text/css" href="..\..\..\css\style.css">
-    <script type="text/javascript" src=".\dayTwob.js" defer></script>
+    <script type="text/javascript" src=".\dayTwobAlt.js" defer></script>
     <title>Day2a\Advent Of Code 2024\projects\Burgener Brady</title>
     </head>
     <body>
