--- a/projects/AdventOfCode2024/Day2/dayTwob.html
+++ b/projects/AdventOfCode2024/Day2/dayTwob.html
@@ -28,6 +28,10 @@
             <li>The levels are either all increasing or all decreasing.</li>
             <li>Any two adjacent levels differ by at least one and at most three.</li>
         </ul>
+        <p>The engineers are surprised by the low number of safe reports until they realize they forgot to tell 
+            you about the Problem Dampener.</p>
+        <p>The Problem Dampener is a reactor-mounted module that lets the reactor safety systems tolerate a single 
+            bad level in what would otherwise be a safe report. It's like the bad level never happened!</p>
         <input type="file" name="file" id="file">
         <div id='output'></div>
     </body>
