--- a/projects/AdventOfCode2023/index.html
+++ b/projects/AdventOfCode2023/index.html
@@ -22,7 +22,7 @@
         <table>
             <tr>
                 <td><a class="navLinkThree" href=".\Day1\dayOne.html">Day 1 a</a></td>
-                <td><a class="navLinkThree gray" >Day 1 b</a></td>
+                <td><a class="navLinkThree" href=".\Day1\dayOneb.html">Day 1 b</a></td>
             </tr>
             <tr>
                 <td><a class="navLinkThree gray">Day 2 a</a></td>
