--- a/projects/AdventOfCode2023/Day1/dayOneb.html
+++ b/projects/AdventOfCode2023/Day1/dayOneb.html
@@ -22,7 +22,11 @@
         <p>The newly-improved calibration document consists of lines of text; each line originally 
             contained a specific calibration value that the Elves now need to recover. On each line, the 
             calibration value can be found by combining the first digit and the last digit (in that order) 
-            to form a single two-digit number. Please upload calibration document:</p>
+            to form a single two-digit number.</p>
+        <p>Your calculation isn't quite right. It looks like some of the digits are actually spelled out 
+            with letters: one, two, three, four, five, six, seven, eight, and nine also count as valid 
+            "digits".</p>
+        <p>Please upload calibration document:</p>
         <input type="file" name="file" id="file">
         <div id='output'></div>
     </body>
