adds answer delay to Magic8Ball

--- a/projects/Magic8Ball/index.html
+++ b/projects/Magic8Ball/index.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Brady Burgener's website">
   <link rel="icon" href="..\..\falcon.jpg">
   <link rel="stylesheet" type="text/css" href="..\..\css\style.css">
+  <script type="text/javascript" src=".\Magic8Ball.js" defer></script>
   <title>Magic 8 Ball</title>
 </head>
 <body>
@@ -19,19 +20,8 @@
     </table>
   </nav>
   <h1 id="magic8">Magic 8 Ball</h1>
-    <script>
-    // Possible 8 Ball responses
-    let responses = [ "Without a doubt", "Ask again later", "Don't count on it", "It is certain", "Reply hazy", 
-        "try again","It is decidedly so", "My reply is no", "Better not tell you now", "My sources say no",
-        "Yes definitely", "Cannot predict now", "Outlook not so good", "You may rely on it", "Concentrate and ask again",
-        "Very doubtful", "As I see it, yes", "Most likely", "Outlook good", "Yes"];
-    let question = (prompt("What do you want to ask the magic 8 ball"));
- 
-    // Display a randomly chosen response
-    let randomNum = Math.floor(Math.random() * responses.length);
-    document.writeln("<h2>" + question + "</h2>");
-    document.writeln("<p>Magic 8 Ball says... <strong>" + responses[randomNum] + "</strong>.</p>");
-    </script>
+    <p id="questionCustomer"></p>
+    <p id="answerCustomer"></p>
     <a class="navLink" id="askAnother" href=".\index.html">Ask Another Question</a>
 </body>
 
