gives time for user to read all messages

--- a/projects/Magic8Ball/index.html
+++ b/projects/Magic8Ball/index.html
@@ -21,6 +21,7 @@
   </nav>
   <h1 id="magic8">Magic 8 Ball</h1>
     <p id="questionCustomer"></p>
+    <p id="answerDelay"></p>
     <p id="answerCustomer"></p>
     <a class="navLink" id="askAnother" href=".\index.html">Ask Another Question</a>
 </body>
