--- a/projects/AdventOfCode2024/index.html
+++ b/projects/AdventOfCode2024/index.html
@@ -29,8 +29,8 @@
                 <td><a class="navLinkThree" href=".\Day2\dayTwob.html">Day 2 b</a></td>
             </tr>
             <tr>
-                <td><a class="navLinkThree gray" >Day 3 a</a></td>
-                <td><a class="navLinkThree gray" >Day 3 b</a></td>
+                <td><a class="navLinkThree" href=".\Day2\dayThree.html">Day 3 a</a></td>
+                <td><a class="navLinkThree" href=".\Day2\dayThreeb.html">Day 3 b</a></td>
             </tr>
             <tr>
                 <td><a class="navLinkThree gray" >Day 4 a</a></td>
