--- a/projects/Magic8Ball/index.html
+++ b/projects/Magic8Ball/index.html
@@ -23,6 +23,7 @@
     <p id="questionCustomer"></p>
     <p id="answerDelay">...</p>
     <p id="answerCustomer">...</p>
+    <button id="askAgain">Are you sure? <br> Ask The Same Question Again</button>
     <a class="navLink" id="askAnother" href=".\index.html">Ask Another Question</a>
 </body>
 
