--- a/projects/index.html
+++ b/projects/index.html
@@ -35,6 +35,11 @@
         <td><a class="navLinkThree" href=".\IdahoWebSite\index.html">Idaho Website</a></td>
         <td><a class="navLinkThree" href=".\Magic8Ball\index.html">Magic 8 Ball</a></td>
       </tr>
+      <tr>
+        <td><a class="navLinkThree" href=".\Temperature\index.html">Temperature Converter</a></td>
+        <td><a class="navLinkThree" >Place holder</a></td>
+        <td><a class="navLinkThree" >Place holder</a></td>
+      </tr>
     </table>
   </body>
   
