adds navigation buttons to Temperature

--- a/projects/Temperature/index.html
+++ b/projects/Temperature/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <title>Temperature Converter</title>
+      <meta charset="UTF-8">
+      <meta name="keywords" content="HTML, CSS, JavaScript, Burgener, Brady">
+      <meta name="author" content="Brady Burgener">
+      <meta name="description" content="Brady Burgener's website - temperature Converter">
+      <link rel="icon" href="..\..\falcon.jpg">
+      <link rel="stylesheet" type="text/css" href="..\..\css\style.css">
+      <title>Temperature Converter_Projects_Brady Burgener</title>
       <script src="convert.js"></script>
       <style>
          body {
@@ -18,6 +24,14 @@
       </style>
    </head>
    <body>
+      <nav>
+         <table>
+           <thead>
+             <th><a class="navLink" href="..\..\index.html">Home page</a></th>
+             <th><a class="navLink" href="..\index.html">Projects</a></th>
+           </thead>
+         </table>
+       </nav>
       <h1>Temperature Converter</h1>
       <p>
          <label for="cInput">Celsius:</label>
