--- a/projects/Temperature/index.html
+++ b/projects/Temperature/index.html
@@ -7,21 +7,9 @@
       <meta name="description" content="Brady Burgener's website - temperature Converter">
       <link rel="icon" href="..\..\falcon.jpg">
       <link rel="stylesheet" type="text/css" href="..\..\css\style.css">
+      <link rel="stylesheet" type="text/css" href=".\css\style.css">
       <title>Temperature Converter_Projects_Brady Burgener</title>
-      <script src="convert.js"></script>
-      <style>
-         body {
-            font-family: Arial, Helvetica, sans-serif;
-         }
-         
-         label {
-            display: block;
-         }
-   
-         #errorMessage {
-            color: red;
-         }
-      </style>
+      <script src=".\javaScript\convert.js"></script>
    </head>
    <body>
       <nav>
@@ -45,7 +33,7 @@
       <p id="errorMessage">
       </p>
       <p>
-         <img id="weatherImage" src="warm.png" alt="Warm">
+         <img id="weatherImage" src=".\images\warm.png" alt="Warm">
       </p>
    </body>
 
