adds Tic Tac Toe

--- a/projects/index.html
+++ b/projects/index.html
@@ -37,7 +37,7 @@
       </tr>
       <tr>
         <td><a class="navLinkThree" href=".\Temperature\index.html">Temperature Converter</a></td>
-        <td><a class="navLinkThree" >Place holder</a></td>
+        <td><a class="navLinkThree" href=".\TicTacToe\index.html">Tic Tac Toe</a></td>
         <td><a class="navLinkThree" >Place holder</a></td>
       </tr>
     </table>
