adds to do list page

--- a/projects/index.html
+++ b/projects/index.html
@@ -38,7 +38,7 @@
       <tr>
         <td><a class="navLinkThree" href=".\Temperature\index.html">Temperature Converter</a></td>
         <td><a class="navLinkThree" href=".\TicTacToe\index.html">Tic Tac Toe</a></td>
-        <td><a class="navLinkThree" >Place holder</a></td>
+        <td><a class="navLinkThree" href=".\ToDoList\index.html">To Do List</a></td>
       </tr>
     </table>
   </body>
