--- a/projects/ToDoList/index.html
+++ b/projects/ToDoList/index.html
@@ -8,7 +8,7 @@
       <link rel="icon" href="..\..\falcon.jpg">
       <title>To-Do List</title>
       <link rel="stylesheet" type="text/css" href="..\..\css\style.css">
-      <link rel="stylesheet" href="styles.css"
+      <link rel="stylesheet" href="styles.css">
       <script src="todo.js" defer></script>
    </head>
    <body>
