--- a/index.html
+++ b/index.html
@@ -22,52 +22,58 @@
       </thead>
     </table>
   </nav>
-  <h1>Brady Burgener</h1>
-  <p>Welcome to my website!</p>
-  <h2>Education</h2>
-  <ul>
-    <li>Certificate in Frontend development </li>
-    <ul class="no-bullets">
-      <li>Western Governors University - Remote </li>
-      <li>July 2024 to Present </li>
+  <div class="resume">
+    <div class="personalInfo">
+      <h1>Brady Burgener</h1>
+      <address>1105 Preston Dr.<br>Idaho Falls ID (208) 403-4943<br>bradylbsee&#64;gmail.com</address>
+    </div>
+    <div class="education">
+      <h2>Education</h2>
+      <ul>
+        <li>Certificate in Frontend development </li>
+        <ul class="no-bullets">
+          <li>Western Governors University - Remote </li>
+          <li>July 2024 to Present </li>
+        </ul>
+        <li>Introduction to Computer Science and Programming Using Python</li>
+        <ul class="no-bullets">
+          <li>March 2017</li>
+          <li><a href="https://courses.edx.org/certificates/cd915c44358042c69f16d3f7a7448617">https://courses.edx.org/certificates/cd915c44358042c69f16d3f7a7448617</a></li>
+        </ul>
+        <li>Intro to Programming Nanodegree</li>
+        <ul class="no-bullets">
+          <li>February 2017</li>
+          <li><a href="https://www.udacity.com/certificate/e/ec8eb4da-b5f6-11e7-af15-374a99e56af8">https://www.udacity.com/certificate/e/ec8eb4da-b5f6-11e7-af15-374a99e56af8</a></li>
+        </ul>
+        <li>Introduction to Python for Data Science</li>
+        <ul class="no-bullets">
+          <li>February 2017</li>
+          <li><a href="https://courses.edx.org/certificates/e9b681359c534511bedf70d1b6a8cf73">https://courses.edx.org/certificates/e9b681359c534511bedf70d1b6a8cf73</a></li>
+        </ul>
+        <li>Fundamentals of Engineering</li>
+        <ul class="no-bullets">
+          <li>October 2008</li>
+          <li>Pass FE/EIT Exam for Chemical Engineering</li>
+        </ul>
+        <li>B.S. in Chemical Engineering </li>
+        <ul class="no-bullets">
+          <li>Brigham Young University-Provo - Provo, UT </li>
+          <li>2001 - April 2008 </li>
+        </ul>
+      </ul>
+    </div>
+    <h2>Skills</h2>
+    <ul>
+      <li>Office</li>
+      <li>ProE</li>
+      <li>MathCAD</li>
+      <li>AutoCAD</li>
+      <li>JavaScript</li>
+      <li>HTML5</li>
+      <li>CSS</li>
+      <li>HTML</li>
     </ul>
-    <li>Introduction to Computer Science and Programming Using Python</li>
-    <ul class="no-bullets">
-      <li>March 2017</li>
-      <li><a href="https://courses.edx.org/certificates/cd915c44358042c69f16d3f7a7448617">https://courses.edx.org/certificates/cd915c44358042c69f16d3f7a7448617</a></li>
-    </ul>
-    <li>Intro to Programming Nanodegree</li>
-    <ul class="no-bullets">
-      <li>February 2017</li>
-      <li><a href="https://www.udacity.com/certificate/e/ec8eb4da-b5f6-11e7-af15-374a99e56af8">https://www.udacity.com/certificate/e/ec8eb4da-b5f6-11e7-af15-374a99e56af8</a></li>
-    </ul>
-    <li>Introduction to Python for Data Science</li>
-    <ul class="no-bullets">
-      <li>February 2017</li>
-      <li><a href="https://courses.edx.org/certificates/e9b681359c534511bedf70d1b6a8cf73">https://courses.edx.org/certificates/e9b681359c534511bedf70d1b6a8cf73</a></li>
-    </ul>
-    <li>Fundamentals of Engineering</li>
-    <ul class="no-bullets">
-      <li>October 2008</li>
-      <li>Pass FE/EIT Exam for Chemical Engineering</li>
-    </ul>
-    <li>B.S. in Chemical Engineering </li>
-    <ul class="no-bullets">
-      <li>Brigham Young University-Provo - Provo, UT </li>
-      <li>2001 - April 2008 </li>
-    </ul>
-  </ul>
-  <h2>Skills</h2>
-  <ul>
-    <li>Office</li>
-    <li>ProE</li>
-    <li>MathCAD</li>
-    <li>AutoCAD</li>
-    <li>JavaScript</li>
-    <li>HTML5</li>
-    <li>CSS</li>
-    <li>HTML</li>
-  </ul>
+  </div>
 </body>
 
 </html>
