changes the wording for the certificate links

--- a/index.html
+++ b/index.html
@@ -38,17 +38,17 @@
         <li>Introduction to Computer Science and Programming Using Python</li>
         <ul class="no-bullets">
           <li>March 2017</li>
-          <li><a href="https://courses.edx.org/certificates/cd915c44358042c69f16d3f7a7448617">https://courses.edx.org/certificates/cd915c44358042c69f16d3f7a7448617</a></li>
+          <li><a href="https://courses.edx.org/certificates/cd915c44358042c69f16d3f7a7448617">Certificate Link</a></li>
         </ul>
         <li>Intro to Programming Nanodegree</li>
         <ul class="no-bullets">
           <li>February 2017</li>
-          <li><a href="https://www.udacity.com/certificate/e/ec8eb4da-b5f6-11e7-af15-374a99e56af8">https://www.udacity.com/certificate/e/ec8eb4da-b5f6-11e7-af15-374a99e56af8</a></li>
+          <li><a href="https://www.udacity.com/certificate/e/ec8eb4da-b5f6-11e7-af15-374a99e56af8">Certificate Link</a></li>
         </ul>
         <li>Introduction to Python for Data Science</li>
         <ul class="no-bullets">
           <li>February 2017</li>
-          <li><a href="https://courses.edx.org/certificates/e9b681359c534511bedf70d1b6a8cf73">https://courses.edx.org/certificates/e9b681359c534511bedf70d1b6a8cf73</a></li>
+          <li><a href="https://courses.edx.org/certificates/e9b681359c534511bedf70d1b6a8cf73">Certificate Link</a></li>
         </ul>
         <li>Fundamentals of Engineering</li>
         <ul class="no-bullets">
