removes under construction banner

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 </head>
 <body>
   <nav>
-    <div class="banner">
+    <!--<div class="banner">
       <p>This website is under construction</p>
-      <p><a href=".\index.html">home</a>--><a href=".\projects\index.html">projects</a></p>
-    </div>
+      <p><a href=".\index.html">home</a>-><a href=".\projects\index.html">projects</a></p>
+    </div>-->
     <table>
       <thead>
         <th><a id="coloredBox" class="navLink"  href=".\index.html">Home page</a></th>
