--- a/index.html
+++ b/index.html
@@ -29,50 +29,79 @@
     </div>
     <div class="education">
       <h2>Education</h2>
-      <ul>
-        <li>Certificate in Frontend development </li>
-        <ul class="no-bullets">
-          <li>Western Governors University - Remote </li>
-          <li>July 2024 to Present </li>
-        </ul>
-        <li>Introduction to Computer Science and Programming Using Python</li>
-        <ul class="no-bullets">
-          <li>March 2017</li>
-          <li><a href="https://courses.edx.org/certificates/cd915c44358042c69f16d3f7a7448617">Certificate Link</a></li>
-        </ul>
-        <li>Intro to Programming Nanodegree</li>
-        <ul class="no-bullets">
-          <li>February 2017</li>
-          <li><a href="https://www.udacity.com/certificate/e/ec8eb4da-b5f6-11e7-af15-374a99e56af8">Certificate Link</a></li>
-        </ul>
-        <li>Introduction to Python for Data Science</li>
-        <ul class="no-bullets">
-          <li>February 2017</li>
-          <li><a href="https://courses.edx.org/certificates/e9b681359c534511bedf70d1b6a8cf73">Certificate Link</a></li>
-        </ul>
-        <li>Fundamentals of Engineering</li>
-        <ul class="no-bullets">
-          <li>October 2008</li>
-          <li>Pass FE/EIT Exam for Chemical Engineering</li>
-        </ul>
-        <li>B.S. in Chemical Engineering </li>
-        <ul class="no-bullets">
-          <li>Brigham Young University-Provo - Provo, UT </li>
-          <li>2001 - April 2008 </li>
-        </ul>
-      </ul>
+      <table class="skillsTable">
+        <tr>
+          <th>Degrees</th>
+          <th>Certificates</th>
+        </tr>
+        <tr>
+          <td class="topLeftAdjusted">
+            <ul>
+                <li>B.S. in Chemical Engineering </li>
+              <ul class="no-bullets">
+                <li>Brigham Young University-Provo - Provo, UT </li>
+                <li>2001 - April 2008 </li>
+              </ul>
+            </ul>
+          </td>
+          <td class="topLeftAdjusted">
+            <ul>
+              <li>Certificate in Frontend development </li>
+              <ul class="no-bullets">
+                <li>Western Governors University (Remote) </li>
+                <li>July 2024 to January 2025 </li>
+                <li><a href="https://www.credly.com/badges/e793a0a2-7978-49ea-9020-33ed76ccb16a/public_url">Certificate Link</a></li>
+              </ul>
+              <li>Introduction to Computer Science and Programming Using Python</li>
+              <ul class="no-bullets">
+                <li>March 2017</li>
+                <li><a href="https://courses.edx.org/certificates/cd915c44358042c69f16d3f7a7448617">Certificate Link</a></li>
+              </ul>
+              <li>Intro to Programming Nanodegree</li>
+              <ul class="no-bullets">
+                <li>February 2017</li>
+                <li><a href="https://www.udacity.com/certificate/e/ec8eb4da-b5f6-11e7-af15-374a99e56af8">Certificate Link</a></li>
+              </ul>
+              <li>Introduction to Python for Data Science</li>
+              <ul class="no-bullets">
+                <li>February 2017</li>
+                <li><a href="https://courses.edx.org/certificates/e9b681359c534511bedf70d1b6a8cf73">Certificate Link</a></li>
+              </ul>
+              <li>Fundamentals of Engineering</li>
+              <ul class="no-bullets">
+                <li>October 2008</li>
+                <li>Pass FE/EIT Exam for Chemical Engineering</li>
+              </ul>
+            </ul>
+          </td>
+        </tr>
+      </table>
     </div>
     <h2>Skills</h2>
-    <ul>
-      <li>Office</li>
-      <li>ProE</li>
-      <li>MathCAD</li>
-      <li>AutoCAD</li>
-      <li>JavaScript</li>
-      <li>HTML5</li>
-      <li>CSS</li>
-      <li>HTML</li>
-    </ul>
+    <table class="skillsTable">
+      <tr>
+        <td class="topCenterAdjusted">
+          <ul>
+            <li>Office</li>
+            <li>ProE</li>
+            <li>MathCAD</li>
+            <li>AutoCAD</li>
+            <!--<li>User Interface Design</li>
+            <li>Version Control</li>-->
+          </ul>
+        </td>
+        <td class="topCenterAdjusted">
+          <ul>
+            <li>JavaScript</li>
+            <li>HTML5</li>
+            <li>CSS</li>
+            <li>HTML</li>
+            <li>Java</li>
+            <li>MySQL</li>
+          </ul>
+        </td>
+      </tr>
+    </table>
   </div>
 </body>
 
