updates resume layout

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
     <div class="education">
       <h2>Education</h2>
-      <table class="skillsTable">
+      <table class="educationTable">
         <tr>
           <th>Degrees</th>
           <th>Certificates</th>
