--- a/index.html
+++ b/index.html
@@ -27,6 +27,41 @@
       <h1>Brady Burgener</h1>
       <address>1105 Preston Dr.<br>Idaho Falls ID (208) 403-4943<br>bradylbsee&#64;gmail.com</address>
     </div>
+    <div class="experience">
+      <h2>EXPERIENCE</h2>
+      <ul class="no-bullets">
+        <li style="font-size: larger;">Burgener Art | Idaho Falls, ID</li>
+        <li><span style="font-weight: bold;">Owner</span>, 2015 - Current</li>
+        <ul>
+          <li>Developed and maintained website</li>
+          <li>Developed problem solving skills</li>
+        </ul>
+        <br>
+        <li style="font-size: larger;">D93 & D91 School Districts | Idaho Falls, ID</li>
+        <li><span style="font-weight: bold;">Substitute Teacher</span>, March 2022 - September 2024</li>
+        <ul>
+          <li>Developed teaching skills</li>
+          <li>Passed ABCTE Physics, General Science, PTK</li>
+        </ul>
+        <br>
+        <li style="font-size: larger;">Bechtel Bettis/BMPC, NRF | INL, ID</li>
+        <li><span style="font-weight: bold;">Fuel Delivery Operations Engineer</span>, May 2013 – April 2015</li>
+        <li><span style="font-weight: bold;">Engineering Training Instructor</span>, February 2011 – May 2013</li>
+        <ul>
+          <li>Developed, and administered live trainings</li>
+          <li>Maintained and updated Engineering Training’s internal website</li>
+        </ul>
+        <li><span style="font-weight: bold;">Operations Support Engineer</span>, September 2008 – February 2011</li>
+        <ul>
+          <li>Obtained document classifier status</li>
+          <li>Assistant database interface programmer</li>
+        </ul>
+      </ul>
+    </div>
+    <div class="projects">
+      <h2>Projects <span style="font-size:small;">(<a href="https://blburgen.github.io/projects/index.html">
+        https://blburgen.github.io/projects/index.html</a>)</span></h2>
+    </div>
     <div class="education">
       <h2>Education</h2>
       <table class="educationTable">
@@ -36,40 +71,49 @@
         </tr>
         <tr>
           <td class="topLeftAdjusted">
-            <ul>
-                <li>B.S. in Chemical Engineering </li>
-              <ul class="no-bullets">
-                <li>Brigham Young University-Provo - Provo, UT </li>
-                <li>2001 - April 2008 </li>
+            <ul class="no-bullets">
+              <li style="font-size: larger;">Brigham Young University-Provo | Provo, UT</li>
+              <li><span style="font-weight: bold;">B.S. in Chemical Engineering</span>, 2001 - April 2008</li>
+              <ul>
+                <li>Research Assistant of the Year Award - January 2007</li>
               </ul>
             </ul>
           </td>
           <td class="topLeftAdjusted">
-            <ul>
+            <ul class="no-bullets leftBorder">
+              <li>Certificate in Backend Software Development </li>
+              <ul>
+                <li>College of Eastern Idaho / Promineo Tech (Remote) | January 2025 - February 2025 (estimate) </li>
+                <!--<li><a href="">Certificate Link</a></li>-->
+              </ul>
+              <br>
               <li>Certificate in Frontend development </li>
-              <ul class="no-bullets">
-                <li>Western Governors University (Remote) </li>
-                <li>July 2024 to January 2025 </li>
+              <ul>
+                <li>Western Governors University (Remote) | July 2024 to January 2025 </li>
                 <li><a href="https://www.credly.com/badges/e793a0a2-7978-49ea-9020-33ed76ccb16a/public_url">Certificate Link</a></li>
               </ul>
+              <br>
               <li>Introduction to Computer Science and Programming Using Python</li>
-              <ul class="no-bullets">
-                <li>March 2017</li>
+              <ul>
+                <li>edX | March 2017</li>
                 <li><a href="https://courses.edx.org/certificates/cd915c44358042c69f16d3f7a7448617">Certificate Link</a></li>
               </ul>
+              <br>
               <li>Intro to Programming Nanodegree</li>
-              <ul class="no-bullets">
-                <li>February 2017</li>
+              <ul>
+                <li>Udacity | February 2017</li>
                 <li><a href="https://www.udacity.com/certificate/e/ec8eb4da-b5f6-11e7-af15-374a99e56af8">Certificate Link</a></li>
               </ul>
+              <br>
               <li>Introduction to Python for Data Science</li>
-              <ul class="no-bullets">
-                <li>February 2017</li>
+              <ul>
+                <li>edX | February 2017</li>
                 <li><a href="https://courses.edx.org/certificates/e9b681359c534511bedf70d1b6a8cf73">Certificate Link</a></li>
               </ul>
+              <br>
               <li>Fundamentals of Engineering</li>
-              <ul class="no-bullets">
-                <li>October 2008</li>
+              <ul>
+                <li>Utah | October 2008</li>
                 <li>Pass FE/EIT Exam for Chemical Engineering</li>
               </ul>
             </ul>
@@ -77,31 +121,33 @@
         </tr>
       </table>
     </div>
+    <div class="skills">
     <h2>Skills</h2>
-    <table class="skillsTable">
-      <tr>
-        <td class="topCenterAdjusted">
-          <ul>
-            <li>Office</li>
-            <li>ProE</li>
-            <li>MathCAD</li>
-            <li>AutoCAD</li>
-            <!--<li>User Interface Design</li>
-            <li>Version Control</li>-->
-          </ul>
-        </td>
-        <td class="topCenterAdjusted">
-          <ul>
-            <li>JavaScript</li>
-            <li>HTML5</li>
-            <li>CSS</li>
-            <li>HTML</li>
-            <li>Java</li>
-            <li>MySQL</li>
-          </ul>
-        </td>
-      </tr>
-    </table>
+      <table class="skillsTable">
+        <tr>
+          <td class="topCenterAdjusted">
+            <ul>
+              <li>Office</li>
+              <li>ProE</li>
+              <li>MathCAD</li>
+              <li>AutoCAD</li>
+              <!--<li>User Interface Design</li>
+              <li>Version Control</li>-->
+            </ul>
+          </td>
+          <td class="topCenterAdjusted">
+            <ul>
+              <li>JavaScript</li>
+              <li>HTML5</li>
+              <li>CSS</li>
+              <li>HTML</li>
+              <li>Java</li>
+              <li>MySQL</li>
+            </ul>
+          </td>
+        </tr>
+      </table>
+    </div>
   </div>
 </body>
 
