makes minor editorials to resume

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         <li><span style="font-weight: bold;">Fuel Delivery Operations Engineer</span>, May 2013 – April 2015</li>
         <li><span style="font-weight: bold;">Engineering Training Instructor</span>, February 2011 – May 2013</li>
         <ul>
-          <li>Developed, and administered live trainings</li>
-          <li>Maintained and updated Engineering Training’s internal website</li>
+          <li>Developed and administered live trainings</li>
+          <li>Maintained and updated Engineering Training’s internal website using Adobe Dreamweaver</li>
         </ul>
         <li><span style="font-weight: bold;">Operations Support Engineer</span>, September 2008 – February 2011</li>
         <ul>
