--- a/index.html
+++ b/index.html
@@ -27,21 +27,41 @@
       <h1>Brady Burgener</h1>
       <address>1105 Preston Dr.<br>Idaho Falls ID (208) 403-4943<br>bradylbsee&#64;gmail.com</address>
     </div>
+    <div class="skills">
+      <h2>Skills</h2>
+      <table class="skillsTable">
+        <tr>
+          <td class="topCenterAdjusted">
+            <ul>
+              <li>Office</li>
+              <li>ProE</li>
+              <li>MathCAD</li>
+              <li>AutoCAD</li>
+              <li>User Interface Design</li>
+              <li>Version Control</li>
+            </ul>
+          </td>
+          <td class="topCenterAdjusted">
+            <ul>
+              <li>JavaScript</li>
+              <li>HTML5</li>
+              <li>CSS</li>
+              <li>HTML</li>
+              <li>Java</li>
+              <li>MySQL</li>
+            </ul>
+          </td>
+          </tr>
+        </table>
+    </div>
     <div class="experience">
-      <h2>EXPERIENCE</h2>
+      <h2>RELEVANT EXPERIENCE</h2>
       <ul class="no-bullets">
         <li style="font-size: larger;">Burgener Art | Idaho Falls, ID</li>
         <li><span style="font-weight: bold;">Owner</span>, 2015 - Current</li>
         <ul>
           <li>Developed and maintained website</li>
           <li>Developed problem solving skills</li>
-        </ul>
-        <br>
-        <li style="font-size: larger;">D93 & D91 School Districts | Idaho Falls, ID</li>
-        <li><span style="font-weight: bold;">Substitute Teacher</span>, March 2022 - September 2024</li>
-        <ul>
-          <li>Developed teaching skills</li>
-          <li>Passed ABCTE Physics, General Science, PTK</li>
         </ul>
         <br>
         <li style="font-size: larger;">Bechtel Bettis/BMPC, NRF | INL, ID</li>
@@ -73,9 +93,9 @@
           <td class="topLeftAdjusted">
             <ul class="no-bullets">
               <li style="font-size: larger;">Brigham Young University-Provo | Provo, UT</li>
-              <li><span style="font-weight: bold;">B.S. in Chemical Engineering</span>, 2001 - April 2008</li>
+              <li><span style="font-weight: bold;">B.S. in Chemical Engineering</span></li>
               <ul>
-                <li>Research Assistant of the Year Award - January 2007</li>
+                <li>Research Assistant of the Year Award</li>
               </ul>
             </ul>
           </td>
@@ -83,7 +103,8 @@
             <ul class="no-bullets leftBorder">
               <li>Certificate in Backend Software Development </li>
               <ul>
-                <li>College of Eastern Idaho / Promineo Tech (Remote) | January 2025 - February 2025 (estimate) </li>
+                <li>College of Eastern Idaho / Promineo Tech (Remote) | January 2025 - February 2025</li>
+                <li><a href="https://drive.google.com/file/d/1sA70zY1tD87pD7EcFYERhWkPab2eHV6K/view">Pending Certificate</a></li>
                 <!--<li><a href="">Certificate Link</a></li>-->
               </ul>
               <br>
@@ -113,7 +134,7 @@
               <br>
               <li>Fundamentals of Engineering</li>
               <ul>
-                <li>Utah | October 2008</li>
+                <li>Utah </li>
                 <li>Pass FE/EIT Exam for Chemical Engineering</li>
               </ul>
             </ul>
@@ -121,33 +142,7 @@
         </tr>
       </table>
     </div>
-    <div class="skills">
-    <h2>Skills</h2>
-      <table class="skillsTable">
-        <tr>
-          <td class="topCenterAdjusted">
-            <ul>
-              <li>Office</li>
-              <li>ProE</li>
-              <li>MathCAD</li>
-              <li>AutoCAD</li>
-              <!--<li>User Interface Design</li>
-              <li>Version Control</li>-->
-            </ul>
-          </td>
-          <td class="topCenterAdjusted">
-            <ul>
-              <li>JavaScript</li>
-              <li>HTML5</li>
-              <li>CSS</li>
-              <li>HTML</li>
-              <li>Java</li>
-              <li>MySQL</li>
-            </ul>
-          </td>
-        </tr>
-      </table>
-    </div>
+
   </div>
 </body>
 
