--- a/projects/index.html
+++ b/projects/index.html
@@ -24,6 +24,7 @@
     </nav>
     <h1 style="text-align: center;">Projects</h1>
     <p>Below are some of my projects</p>
+    <p><a href="https://github.com/blburgen">https://github.com/blburgen</a></p>
     <table>
       <tr>
         <td><a class="navLinkThree" href=".\AdventOfCode2023\index.html">Advent of Code 2023</a></td>
