adds Quick Start Projects link

--- a/projects/index.html
+++ b/projects/index.html
@@ -37,9 +37,15 @@
         <td><a class="navLinkThree" href=".\Magic8Ball\index.html">Magic 8 Ball</a></td>
       </tr>
       <tr>
+        <td><a class="navLinkThree" href="https://blburgen.github.io/QuickStartProjects/">Quick Start Projects</a></td>
         <td><a class="navLinkThree" href=".\Temperature\index.html">Temperature Converter</a></td>
         <td><a class="navLinkThree" href=".\TicTacToe\index.html">Tic Tac Toe</a></td>
+        
+      </tr>
+      <tr>
         <td><a class="navLinkThree" href=".\ToDoList\index.html">To Do List</a></td>
+        <td></td>
+        <td></td>
       </tr>
     </table>
   </body>
