--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <div class="resume">
     <div class="personalInfo">
       <h1>Brady Burgener</h1>
-      <address>1105 Preston Dr.<br>Idaho Falls ID (208) 403-4943<br>bradylbsee&#64;gmail.com</address>
+      <address>Idaho Falls, Idaho<br>(208) 403-4943<br>bradylbsee&#64;gmail.com</address>
     </div>
     <div class="skills">
       <h2>Skills</h2>
@@ -33,12 +33,22 @@
         <tr>
           <td class="topCenterAdjusted">
             <ul>
-              <li>Office</li>
+              <li>MS Office</li>
               <li>ProE</li>
               <li>MathCAD</li>
               <li>AutoCAD</li>
               <li>User Interface Design</li>
               <li>Version Control</li>
+            </ul>
+          </td>
+          <td class="topCenterAdjusted">
+            <ul>
+              <li>TypeScript</li>
+              <li>C++</li>
+              <li>REST APIs</li>
+              <li>JSON/XML</li>
+              <li>Python</li>
+              <li>React</li>
             </ul>
           </td>
           <td class="topCenterAdjusted">
@@ -69,12 +79,13 @@
         <li><span style="font-weight: bold;">Engineering Training Instructor</span>, February 2011 – May 2013</li>
         <ul>
           <li>Developed and administered live trainings</li>
-          <li>Maintained and updated Engineering Training’s internal website using Adobe Dreamweaver</li>
+          <li>Maintained and updated Engineering Training’s internal website using HTML and CSS</li>
+          <li>Maintained document classifier status</li>
         </ul>
         <li><span style="font-weight: bold;">Operations Support Engineer</span>, September 2008 – February 2011</li>
         <ul>
-          <li>Obtained document classifier status</li>
-          <li>Assistant database interface programmer</li>
+          <li>Obtained document classifier status to provide assistance in giving proper document classification for the documents produced in the group.</li>
+          <li>Provided assistance with the groups access database as backup programmer.</li>
         </ul>
       </ul>
     </div>
@@ -86,34 +97,37 @@
       <h2>Education</h2>
       <table class="educationTable">
         <tr>
-          <th>Degrees</th>
+          <th>Colleges/Universities</th>
           <th>Certificates</th>
         </tr>
         <tr>
           <td class="topLeftAdjusted">
             <ul class="no-bullets">
-              <li style="font-size: larger;">Brigham Young University-Provo | Provo, UT</li>
-              <li><span style="font-weight: bold;">B.S. in Chemical Engineering</span></li>
+              <li class="colleges">Brigham Young University-Provo | Provo, UT</li>
+              <li><span class="degrees">B.S. in Chemical Engineering</span></li>
               <ul>
                 <li>Research Assistant of the Year Award</li>
+              </ul>
+              <br>
+              <li class="colleges">Western Governors University | Remote <br> July 2024 - Jan. 2025</li>
+              <li class="degrees">Certificate in Front-End Development </li>
+              <ul>
+                <li><a href="https://www.credly.com/badges/e793a0a2-7978-49ea-9020-33ed76ccb16a/public_url">Certificate Link</a></li>
+              </ul>
+              <br>
+              <li class="colleges">College of Eastern Idaho / Promineo Tech | Remote <br> Jan. 2025 - May 2025</li>
+              <li class="degrees">Certificate in Back-End Software Development </li>
+              <ul>
+                <li><a href="https://drive.google.com/file/d/1sA70zY1tD87pD7EcFYERhWkPab2eHV6K/view">Pending Certificate(Completed Feb. 2025)</a></li>
+              </ul>
+              <li class="degrees">Certificate in Front-End Software Development </li>
+              <ul>
+                <li>Anticipated Completion Date May 2025</li>
               </ul>
             </ul>
           </td>
           <td class="topLeftAdjusted">
             <ul class="no-bullets leftBorder">
-              <li>Certificate in Backend Software Development </li>
-              <ul>
-                <li>College of Eastern Idaho / Promineo Tech (Remote) | January 2025 - February 2025</li>
-                <li><a href="https://drive.google.com/file/d/1sA70zY1tD87pD7EcFYERhWkPab2eHV6K/view">Pending Certificate</a></li>
-                <!--<li><a href="">Certificate Link</a></li>-->
-              </ul>
-              <br>
-              <li>Certificate in Frontend development </li>
-              <ul>
-                <li>Western Governors University (Remote) | July 2024 to January 2025 </li>
-                <li><a href="https://www.credly.com/badges/e793a0a2-7978-49ea-9020-33ed76ccb16a/public_url">Certificate Link</a></li>
-              </ul>
-              <br>
               <li>Introduction to Computer Science and Programming Using Python</li>
               <ul>
                 <li>edX | March 2017</li>
