--- a/index.html
+++ b/index.html
@@ -6,22 +6,19 @@
   <meta name="author" content="Brady Burgener">
   <meta name="description" content="Brady Burgener's website">
   <link rel="icon" href=".\falcon.jpg">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" type="text/css" href=".\css\style.css">
   <title>Burgener Brady</title>
 </head>
 <body>
-  <nav>
-    <!--<div class="banner">
-      <p>This website is under construction</p>
-      <p><a href=".\index.html">home</a>-><a href=".\projects\index.html">projects</a></p>
-    </div>-->
-    <table>
-      <thead>
-        <th><a id="coloredBox" class="navLink"  href=".\index.html">Home page</a></th>
-        <th><a class="navLink" href=".\projects\index.html">Projects</a></th>
-      </thead>
-    </table>
-  </nav>
+  <div class="container-fluid navbar-expand-md text-light">
+    <nav class="navbar-nav d-flex justify-content-evenly">
+      <a class="text-center nav-link col-md-4 rounded-3 navLinkThree bg-primary" href=".\">Home page</a>
+      <a class="text-center nav-link col-md-4 rounded-3 navLinkThree text-primary" href=".\projects\">Projects</a>
+    </nav>
+  </div>
+  
   <div class="resume">
     <div class="personalInfo">
       <h1>Brady Burgener</h1>
@@ -29,40 +26,25 @@
     </div>
     <div class="skills">
       <h2>Skills</h2>
-      <table class="skillsTable">
-        <tr>
-          <td class="topCenterAdjusted">
-            <ul>
-              <li>MS Office</li>
-              <li>ProE</li>
-              <li>MathCAD</li>
-              <li>AutoCAD</li>
-              <li>User Interface Design</li>
-              <li>Version Control</li>
-            </ul>
-          </td>
-          <td class="topCenterAdjusted">
-            <ul>
-              <li>TypeScript</li>
-              <li>C++</li>
-              <li>REST APIs</li>
-              <li>JSON/XML</li>
-              <li>Python</li>
-              <li>React</li>
-            </ul>
-          </td>
-          <td class="topCenterAdjusted">
-            <ul>
-              <li>JavaScript</li>
-              <li>HTML5</li>
-              <li>CSS</li>
-              <li>HTML</li>
-              <li>Java</li>
-              <li>MySQL</li>
-            </ul>
-          </td>
-          </tr>
-        </table>
+      <div class="container mx-4">
+        <div class="row mx-md-4 mx-lg-5">
+          <div class="col-12 col-md-6 col-lg-4"><li>HTML5</li></div>
+          <div class="col-12 col-md-6 col-lg-4"><li>CSS</li></div>
+          <div class="col-12 col-md-6 col-lg-4"><li>JavaScript</li></div>
+          <div class="col-12 col-md-6 col-lg-4"><li>TypeScript</li></div>
+          <div class="col-12 col-md-6 col-lg-4"><li>JSON/XML</li></div>
+          <div class="col-12 col-md-6 col-lg-4"><li>Java</li></div>
+          <div class="col-12 col-md-6 col-lg-4"><li>MySQL</li></div>
+          <div class="col-12 col-md-6 col-lg-4"><li>Python</li></div>
+          <div class="col-12 col-md-6 col-lg-4"><li>C++</li></div>
+          <div class="col-12 col-md-6 col-lg-4"><li>React</li></div>
+          <div class="col-12 col-md-6 col-lg-4"><li>AutoCAD</li></div>
+          <div class="col-12 col-md-6 col-lg-4"><li>MathCAD</li></div>
+          <div class="col-12 col-md-6 col-lg-4"><li>Problem Solving</li></div>
+          <div class="col-12 col-md-6 col-lg-4"><li>Teamwork</li></div>
+          <div class="col-12 col-md-6 col-lg-4"><li>Time management</li></div>
+        </div>
+      </div>
     </div>
     <div class="experience">
       <h2>RELEVANT EXPERIENCE</h2>
@@ -95,13 +77,10 @@
     </div>
     <div class="education">
       <h2>Education</h2>
-      <table class="educationTable">
-        <tr>
-          <th>Colleges/Universities</th>
-          <th>Certificates</th>
-        </tr>
-        <tr>
-          <td class="topLeftAdjusted">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-12 col-lg-6 border-2 border-start border-end">
+            <div class="fw-bold text-center">Colleges/Universities</div>
             <ul class="no-bullets">
               <li class="colleges">Brigham Young University-Provo | Provo, UT</li>
               <li><span class="degrees">B.S. in Chemical Engineering</span></li>
@@ -125,9 +104,10 @@
                 <li>Anticipated Completion Date May 2025</li>
               </ul>
             </ul>
-          </td>
-          <td class="topLeftAdjusted">
-            <ul class="no-bullets leftBorder">
+          </div>
+          <div class="col-12 col-lg-6 border-2 border-start border-end">
+            <div class="fw-bold text-center">Certificates</div>
+            <ul class="no-bullets">
               <li>Introduction to Computer Science and Programming Using Python</li>
               <ul>
                 <li>edX | March 2017</li>
@@ -152,9 +132,9 @@
                 <li>Pass FE/EIT Exam for Chemical Engineering</li>
               </ul>
             </ul>
-          </td>
-        </tr>
-      </table>
+          </div>
+        </div>
+      </div>
     </div>
 
   </div>
