updates color of links

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
   <div class="container-fluid navbar-expand-md text-light">
     <nav class="navbar-nav d-flex justify-content-evenly">
-      <a class="text-center nav-link col-md-4 rounded-3 navLinkThree bg-primary" href=".\">Home page</a>
-      <a class="text-center nav-link col-md-4 rounded-3 navLinkThree text-primary" href=".\projects\">Projects</a>
+      <a class="text-center nav-link col-md-4 rounded-3 navLinkThree bg-secondary" href=".\">Home page</a>
+      <a class="text-center nav-link col-md-4 rounded-3 navLinkThree bg-primary" href=".\projects\">Projects</a>
     </nav>
   </div>
   
