--- a/index.html
+++ b/index.html
@@ -49,6 +49,13 @@
     <div class="experience">
       <h2>RELEVANT EXPERIENCE</h2>
       <ul class="no-bullets">
+        <li style="font-size: larger;">QuickStart | Remote</li>
+        <li><span style="font-weight: bold;">Full Stack Developer Development</span>, January 2025 - July 2025</li>
+        <ul>
+          <li>Apprenticeship in hands-on bootcamp</li>
+          <li>Developed applications using Java, JavaScript, HTML, CSS, Spring Boot, Rest API, and more</li>
+        </ul>
+        <br>
         <li style="font-size: larger;">Burgener Art | Idaho Falls, ID</li>
         <li><span style="font-weight: bold;">Owner</span>, 2015 - Current</li>
         <ul>
@@ -56,7 +63,7 @@
           <li>Developed problem solving skills</li>
         </ul>
         <br>
-        <li style="font-size: larger;">Bechtel Bettis/BMPC, NRF | INL, ID</li>
+        <li style="font-size: larger;">Bechtel Bettis/BMPC, Naval Reactors Facility | INL, ID</li>
         <li><span style="font-weight: bold;">Fuel Delivery Operations Engineer</span>, May 2013 – April 2015</li>
         <li><span style="font-weight: bold;">Engineering Training Instructor</span>, February 2011 – May 2013</li>
         <ul>
@@ -72,8 +79,20 @@
       </ul>
     </div>
     <div class="projects">
-      <h2>Projects <span style="font-size:small;">(<a href="https://blburgen.github.io/projects/index.html">
-        https://blburgen.github.io/projects/index.html</a>)</span></h2>
+      <h2>Projects</h2>
+      <div class="container-fluid">
+        <h3 class="text-center">Access project at the links below</h3>
+        <div class="row">
+          <div class="col-12 col-lg-6">
+            <div class="text-center">Github pages</div>
+            <div class="text-center"><a href="https://blburgen.github.io/projects/">https://blburgen.github.io/projects/</a></div>
+          </div>
+          <div class="col-12 col-lg-6">
+            <div class="text-center">Github</div>
+            <div class="text-center"><a href="https://github.com/blburgen">https://github.com/blburgen</a></div>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="education">
       <h2>Education</h2>
@@ -94,10 +113,11 @@
                 <li><a href="https://www.credly.com/badges/e793a0a2-7978-49ea-9020-33ed76ccb16a/public_url">Certificate Link</a></li>
               </ul>
               <br>
-              <li class="colleges">College of Eastern Idaho / Promineo Tech | Remote <br> Jan. 2025 - May 2025</li>
+              <li class="colleges">College of Eastern Idaho / Promineo Tech / QuickStart | Remote <br> Jan. 2025 - May 2025</li>
               <li class="degrees">Certificate in Back-End Software Development </li>
               <ul>
-                <li><a href="https://drive.google.com/file/d/1sA70zY1tD87pD7EcFYERhWkPab2eHV6K/view">Pending Certificate(Completed Feb. 2025)</a></li>
+                <li><a href="https://drive.google.com/file/d/1sA70zY1tD87pD7EcFYERhWkPab2eHV6K/view">Completed Feb. 2025</a></li>
+                <li><a href="https://tools.promineotech.com/student_certs/9ccbe9ba_bradylbsee.pdf">Certificate</a></li>
               </ul>
               <li class="degrees">Certificate in Front-End Software Development </li>
               <ul>
