--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="keywords" content="HTML, CSS, JavaScript, Burgener, Brady">
   <meta name="author" content="Brady Burgener">
   <meta name="description" content="Brady Burgener's website">
-  <link rel="icon" href=".\falcon.jpg">
+  <link rel="icon" href="https://blburgen.github.io/falcon.jpg">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" type="text/css" href=".\css\style.css">
@@ -156,7 +156,11 @@
         </div>
       </div>
     </div>
-
+  </div>
+  <div>
+    <footer>
+      <p class="text-center">&copy;2025 Brady Burgener</p>
+    </footer>
   </div>
 </body>
 
