adds leetcode link

--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
   <div class="resume">
     <div class="personalInfo">
       <h1>Brady Burgener</h1>
-      <address>Idaho Falls, Idaho<br>(208) 403-4943<br>bradylbsee&#64;gmail.com</address>
+      <address>Idaho Falls, Idaho<br>
+        (208) 403-4943<br>
+        bradylbsee&#64;gmail.com <br>
+        <a href="https://leetcode.com/u/blburgen/" class="white">LeetCode.com/blburgen</a>
+      </address>
     </div>
     <div class="skills">
       <h2>Skills</h2>
